2002-11-12  Andrew Cagney  <ac131313@redhat.com>

	* config/djgpp/fnchange.lst: Fix typo, hang1.c to hang1.C; hang2.c
	to hang2.C; hang3.c to hang3.C.

2002-11-08  Andrew Cagney  <ac131313@redhat.com>

	* Makefile.in (DESTDIR): Define.
	(install-only, install-gdbtk, uninstall-gdbtk): Add $(DESTDIR)
	prefix.

	* config/djgpp/fnchange.lst: 8.3 proof i386obsd-nat.c and
	i386obsd-tdep.c.  Rename to "gdb.cxx", paths containing "gdb.c++".

2002-11-06  Joel Brobecker  <brobecker@gnat.com>

	* PROBLEMS: Document gdb/816 (unable to read core file on alpha-osf).

2002-11-06  Theodore A. Roth  <troth@openavr.org>

	* c-exp.y: Add missing semi-colons.
	* f-exp.y: Add missing semi-colons.
	* m2-exp.y: Add missing semi-colons.
	* p-exp.y: Add missing semi-colons.
	Add empty action to start rule to avoid a type clash error when
	building with bison >= 1.50.

2002-10-31  Joel Brobecker  <brobecker@gnat.com>

	* hppa-tdep.c (low_text_segment_addres): Fix a compilation warning.

2002-10-25  Mark Kettenis  <kettenis@gnu.org>

	* Makefile.in (i386v-nat.o): Add $(i386_tdep_h).
	* i386v-nat.c: Include "i386-tdep.h".

2002-10-22  David Carlton  <carlton@math.stanford.edu>

	* dwarf2read.c (dwarf_tag_name): Add DWARF 3 names.
	(dwarf_attr_name): Ditto.
	(dwarf_type_encoding_name): Ditto.
	(scan_partial_symbols): Descend into DW_TAG_namespace entries.
	(process_die): Handle DW_TAG_namespace,
	DW_TAG_imported_declaration, DW_TAG_imported_module.
	(read_namespace): New function.

2002-10-22  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in (install-gdbtk): Add missing continuation backslash to
	insure that shell variables, such as "transformed_name" are propagated
	to later shell statements in rule.

2002-10-20  Mark Kettenis  <kettenis@gnu.org>

	* configure.tgt (i[3456]86-*-openbsd*): Set gdb_target to obds.
	* config/i386/obsd.mt: New file.
	* i386bsd-nat.c (_initialize_i386bsd_nat): Introduce
	i386obsd_sc_pc_offset and i386obsd_sc_sp_offset;