@@ -1,5 +1,11 @@
 2002-11-12  Andrew Cagney  <ac131313@redhat.com>
 
+	* utils.c (gdb_realpath): Rewrite.  Try, in order: realpath() with
+	a constant buffer; cannonicalize_file_name(); realpath() with a
+	pathconf() defined buffer, xstrdup().
+
+2002-11-12  Andrew Cagney  <ac131313@redhat.com>
+
 	* config/djgpp/fnchange.lst: Fix typo, hang1.c to hang1.C; hang2.c
 	to hang2.C; hang3.c to hang3.C.
 
